image presets for drupal 6 and private files

--- a/files/dork.conf
+++ b/files/dork.conf
@@ -53,7 +53,16 @@ server {
   }
 
   # Fighting with Styles? This little gem is amazing.
-  location ~ ^/sites/.*/files/styles/ {
+  location ~ /sites/.*/files/styles/ {
+    try_files $uri @rewrite;
+  }
+
+  location ~ /sites/.*/files/imagecache/ {
+    try_files $uri @rewrite;
+  }
+
+  # Private files image styles
+  location ~* /system/files/.*\.(png|jpg|jpeg|gif|ico)$ { # If the image does not exist, it must be a private file.
     try_files $uri @rewrite;
   }
 
