Added option to autostart syslog module.

--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -158,3 +158,6 @@
     --include=sites/default/default.settings.php
     /var/web/ /var/build/
   tags: codesync
+
+- include: syslog.yml
+  when: drupal_syslog
