--- a/meta/main.yml
+++ b/meta/main.yml
@@ -2,6 +2,7 @@ dependencies:
 - dork.php
 - dork.mariadb
 - dork.shell
+
 dork:
   update_triggers:
   - "**.install": ['update']
@@ -23,8 +24,13 @@ dork:
     - "index.php"
     - "install.php"
 
-    drupal_profile:
+    drupal_profile_make:
     - "drupal-org.make"
+
+    drupal_core_make:
     - "drupal-org-core.make"
+
+    drupal_profile:
+    - "*.profile"
 
     
