Run cim --partial to not delete existing configuration.

--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -115,7 +115,7 @@
   tags: drupal_features
 
 - name: import configuration
-  shell: drush cim -y
+  shell: drush cim --partial -y
   ignore_errors: yes
   tags: drupal_config_import
 
